--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,2 +1,15 @@
-/* @use './stylea/header.css';
-@use '.' */
+
+#root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+
+
