--- a/Client/src/styles/admin.css
+++ b/Client/src/styles/admin.css
@@ -17,11 +17,11 @@ body {
 .admin{
     width: 80%;
 }
-
+/* 
 .adminProductList{
     background-color: aqua;
 }
 
 .adminOrderList{
     background-color: blue;
-}
+} */
