--- a/Client/src/styles/navigation.css
+++ b/Client/src/styles/navigation.css
@@ -1,5 +1,5 @@
 nav {
-  padding: 30px;
+  padding: 10px;
   position: fixed;
   top: 0;
   left: 0;
@@ -13,11 +13,16 @@ nav {
 
 .logo {
  color: #FFCC00 ;
+ font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 100;
+  font-style: normal;
 
   
 }
 
 .Logo {
+  
+  margin-left: 30px;
   display: flex;
   align-items: center; /* Centrera logotypen vertikalt */
 }
@@ -47,7 +52,7 @@ nav ul li a:hover {
 }
 
 img {
-  width: 100px; /* Justera logotypens storlek efter behov */
+  width: 80px; /* Justera logotypens storlek efter behov */
 }
 
 .AdminBtn {
