--- a/Client/src/styles/admin.css
+++ b/Client/src/styles/admin.css
@@ -14,26 +14,95 @@ body {
     margin: 0;
     padding: 0;
 }
+
+h2{
+    margin-top: 190px;
+    margin-bottom: -100px;
+    font-size: 30px;
+}
 .admin{
     width: 100%;
 }
-.adminProductList{
-    margin-top: 150px;
-}
 
-.product{
-    background-color: aqua;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-}
 .order{
     border: 1px solid black;
 }
-/* 
-.adminProductList{
-    background-color: aqua;
+
+.adminProductList {
+    display: flex;
+    flex-wrap: wrap;
+    h1{
+        color: rgb(0, 0, 0);
+        text-decoration: none;
+        border: none;
+        font-size: larger;
+    }
 }
 
-.adminOrderList{
-    background-color: blue;
-} */
+.product{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(196, 195, 195);
+    padding: 15px;
+    justify-content: space-between;        
+}
+
+.adminProductList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Centrera elementen horisontellt */
+    align-items: center; /* Centrera elementen vertikalt */
+    gap: 20px; /* Avstånd mellan elementen */
+    margin-top: 150px;
+}
+
+.order{
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centrera elementen horisontellt */
+    align-items: center; /* Centrera elementen vertikalt */
+    gap: 20px; /* Avstånd mellan elementen */
+    margin-top: 150px;
+    border: none;
+    
+    
+}
+
+.oneOrder{
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(196, 195, 195);
+    width: 50%;
+}
+.orderName{
+    margin-top: 70px;
+    
+    
+}
+
+.addProduct{
+    background-color: rgb(1, 72, 1);
+    width: 200px;
+    height: 40px;
+    color: #fff;
+    font-weight: 700;
+    margin-top: 60px; /* Lägg till lite mellanrum över knappen */
+    align-self: center;
+    &:hover {
+        background-color: rgb(0, 56, 0); /* Ändra bakgrundsfärgen när musen sveps över */
+    }
+
+}
+.editProduct{
+    background-color: rgb(1, 72, 1);
+    width: 160px;
+    height: 40px;
+    color: #fff;
+    font-weight: 700;
+    margin-top: 10px; /* Lägg till lite mellanrum över knappen */
+    align-self: center;
+    &:hover {
+        background-color: rgb(0, 56, 0); /* Ändra bakgrundsfärgen när musen sveps över */
+    }
+}
