--- a/Client/src/styles/navigation.css
+++ b/Client/src/styles/navigation.css
@@ -12,17 +12,13 @@ nav {
 }
 
 .logo {
- color: #FFCC00 ;
- font-family: "Montserrat Alternates", sans-serif;
+  color: #FFCC00;
+  font-family: "Montserrat Alternates", sans-serif;
   font-weight: 100;
   font-style: normal;
-
-  
 }
 
 .Logo {
-  
-  margin-left: 30px;
   display: flex;
   align-items: center; /* Centrera logotypen vertikalt */
 }
@@ -53,6 +49,7 @@ nav ul li a:hover {
 
 img {
   width: 80px; /* Justera logotypens storlek efter behov */
+  margin-right: 10px; /* Avstånd mellan logotypen och texten */
 }
 
 .AdminBtn {
